# confidential-payroll-stellar

./: .gitignore  README.md
circuits/: Nargo.toml
circuits/batch/: Nargo.toml  Prover.toml
circuits/batch_v2/: Nargo.toml  Prover.toml
circuits/src/: main.nr
circuits/withdraw/: Nargo.toml  Prover.toml
circuits/withdraw_v2/: Nargo.toml  Prover.toml
contracts/: Cargo.toml
contracts/orchestrator/: Cargo.toml
contracts/orchestrator/src/: lib.rs  test.rs
contracts/orchestrator/test_snapshots/test/: batches_n_transfers_and_blocks_replay.1.json  len_mismatch_rejected.1.json
contracts/payroll/: Cargo.toml
contracts/payroll/src/: lib.rs  test.rs
contracts/payroll/test_snapshots/test/: constructor_wires_verifier_and_balance_starts_empty.1.json  constructor_wires_verifier_pool_empty_balances_empty.1.json  constructor_wires_verifier_token_pool_empty.1.json  fund_increments_pool.1.json  fund_pulls_real_tokens_and_credits_pool.1.json  fund_then_payroll_conserves_and_stores.1.json  insufficient_pool_is_rejected.1.json  invalid_proof_reverts_payroll.1.json  replayed_nonce_is_rejected.1.json
design/brand/: colors.html  logo.html
design/components/: buttons.html  encrypted-revealed.html
design/screens/: hero.html
docs/: architecture.md  batch-circuit-result.md  demo-script.md  e2e-result.md  gate1-result.md  gate2-result.md  spike-plan.md
docs/production/: 01-key-separation.md  02-client-side-proving.md  03-align-with-oz-confidential-token.md  05-ui-rewire-oz.md  DECISIONS.md  (+2 more)
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json
(+39 files in other folders)
