[workspace]
resolver = "2"
members = ["payroll", "orchestrator"]

# Future members (added as the spike unblocks them):
#   "verifier"  — UltraHonk/BN254 proof verification gateway
#   "policy"    — view-key registry, allow-list, limits

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
codegen-units = 1
lto = true
panic = "abort"
